@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: ListObj.3,v 1.4.26.4 2007/07/09 12:31:51 dgp Exp $
+'\" RCS: @(#) $Id: ListObj.3,v 1.4.26.5 2008/12/18 23:19:07 dgp Exp $
 '\" 
 .so man.macros
 .TH Tcl_ListObj 3 8.0 Tcl "Tcl Library Procedures"
@@ -222,7 +222,7 @@ referenced by the array of object pointers \fIobjv\fR
 just before the element \fIindex\fR of the list referenced by \fIlistPtr\fR:
 .PP
 .CS
-result = Tcl_ListObjReplace(interp, listPtr, index, 0,
+result = \fBTcl_ListObjReplace\fR(interp, listPtr, index, 0,
         objc, objv);
 .CE
 .PP
@@ -231,9 +231,9 @@ referenced by the array \fIobjv\fR
 to the end of the list \fIlistPtr\fR:
 .PP
 .CS
-result = Tcl_ListObjLength(interp, listPtr, &length);
+result = \fBTcl_ListObjLength\fR(interp, listPtr, &length);
 if (result == TCL_OK) {
-    result = Tcl_ListObjReplace(interp, listPtr, length, 0,
+    result = \fBTcl_ListObjReplace\fR(interp, listPtr, length, 0,
             objc, objv);
 }
 .CE
@@ -243,10 +243,10 @@ by simply calling \fBTcl_ListObjReplace\fR
 with a NULL \fIobjvPtr\fR:
 .PP
 .CS
-result = Tcl_ListObjReplace(interp, listPtr, first, count,
+result = \fBTcl_ListObjReplace\fR(interp, listPtr, first, count,
         0, NULL);
 .CE
 .SH "SEE ALSO"
-Tcl_NewObj, Tcl_DecrRefCount, Tcl_IncrRefCount, Tcl_GetObjResult
+Tcl_NewObj(3), Tcl_DecrRefCount(3), Tcl_IncrRefCount(3), Tcl_GetObjResult(3)
 .SH KEYWORDS
 append, index, insert, internal representation, length, list, list object, list type, object, object type, replace, string representation
